--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,2 @@
 # Include your live/ test Stripe secret key here. Ensure that the key matches the account the reader is registered to. 
-STRIPE_SECRET=""
+STRIPE_SECRET="sk_test_uGO1EasKogQcp3Q5QtKDTjbi"
